pod-service2.yml
kind: Pod
apiVersion: v1
metadata:
  name: httpd-app
  labels:
    app: httpd
spec:
  containers:
  - name: httpd-app
    image: httpd
    ports:
    - containerPort: 80

---

kind: Service
apiVersion: v1
metadata:
  name: httpd-service
spec:
  selector:
    app: httpd
  ports:
  - port: 8580
    targetPort: 80
