ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  tls:
    - hosts:
      - rakhe-manohar
      secretName: tls-secret
  rules:
  - host: rakhe-manohar
    http:
      paths:
        - path: /httpd
          backend:
            serviceName: httpd-service
            servicePort: 8580
